force-app/main/default/objects/Procedure_Projection__c/fields/Number_of_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Procedures__c</fullName>
    <label># of Procedures</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>