force-app/main/default/objects/Procedure_Projection__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Draft Drive</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Procedure Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>