force-app/main/default/objects/Procedure_Projection__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <label>Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipName>Projections1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>